--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -19,5 +19,6 @@ body {
 }
 
 h1 {
-	font-family: 
+	font-family: 'Libre Baskerville', serif;
+	color:rgb(152,173,166);
 }
