--- a/css/style.css
+++ b/css/style.css
@@ -21,4 +21,10 @@ body {
 h1 {
 	font-family: 'Libre Baskerville', serif;
 	color:rgb(152,173,166);
+	font-size: 5em;
+  font-weight: normal;
+}
+
+h1 a:hover {
+	color:#606060;
 }
