--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 	padding: 0 45px 20px;
 }
 
-h1 {
+h1 a {
 	font-family: 'Libre Baskerville', serif;
 	color:rgb(152,173,166);
 	font-size: 5em;
