--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1 a {
 	font-family: 'Libre Baskerville', serif;
 	color:rgb(152,173,166);
 	font-size: 60px;
-  font-weight: normal;
+  font-weight: bold;
 	text-decoration: none;
 }
 
