--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 /*////////////// Fonts //////////////*/
-@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);
 
 /* link the web font used for the level 1 heading here */
 
@@ -19,7 +21,7 @@ body {
 }
 
 h1 a {
-	font-family: 'Libre Baskerville', serif;
+	font-family: 'Baskerville', serif;
 	color:rgb(152,173,166);
 	font-size: 60px;
   font-weight: bold;
