--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,11 @@ p {
 	font-size: 1em;
 	margin: 0 0 20px 0;
 }
+
+.links {
+	border: 5px solid #ccc
+}
+
+.links a:hover {
+	border: 5px solid rgb(111,127,122);
+}
