--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*////////////// Fonts //////////////*/
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 
 /* link the web font used for the level 1 heading here */
 
@@ -7,7 +8,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -17,4 +18,44 @@ body {
 	padding: 0 45px 20px;
 }
 
-/* Write all remaining styles here */
+h1 a {
+	font-family: 'Libre Baskerville', serif;
+	color:rgb(152,173,166);
+	font-size: 60px;
+  font-weight: bold;
+	text-decoration: none;
+}
+
+h1 a:hover {
+	color:#606060;
+}
+
+.wrapper img {
+	border:5px solid rgb(152,173,166);
+}
+
+h2 {
+	color: rgb(111,127,122);
+  font-size: 2em;
+}
+
+p {
+	color: #555;
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+#press img {
+	border: 5px solid #ccc
+}
+
+#press img:hover {
+	border: 5px solid rgb(111,127,122);
+}
+
+footer {
+	font-size: .75em;
+	text-align: right;
+	color: #ccc;
+	padding:20px;
+}
